wrap the displayed password in a span and style with css

--- a/assets/main.css
+++ b/assets/main.css
@@ -647,6 +647,10 @@ tbody {
   align-self: left;
 }
 
+.selectPassword > .userPassword {
+  font-weight: bold;
+}
+
 .setPassword {
   align-self: left;
   display: flex;
